--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,9 @@
 .webcam-stream {
-    height: 160px;
     transform: scaleX(-1);
-  }
-  
+    width: auto;
+    height: auto;
+}
+
+#video-output {
+  transform: scaleX(-1);
+}
