--- a/src/style.css
+++ b/src/style.css
@@ -9,24 +9,19 @@
 
 #welcom-bg {
   background-color: #66B2FF;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: absolute;
 }
 
 #welcom-bg-container {
-  margin-top: 40vh;
+  margin-top: 35vh;
   color: whitesmoke;
 }
 
 #main-canvas {
   width: 100%;
   height: 100%;
-}
-
-header {
-  height: 90px;
-  padding: 5px;
 }
 
 .bottom-right {
@@ -37,15 +32,7 @@ header {
   height: auto;
 }
 
-#head-btns {
-  float: right;
-}
-
-#head-text {
-  margin-left: 1%;
-}
-
-#find-me-on-btns {
+#how-to-play {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -53,4 +40,8 @@ header {
 
 #find-me-on-yt {
   background-color: #ed302f;
+}
+
+#nav-text {
+  line-height: 0.5;
 }
